# SimdExperiments

./: .gitignore  .gitmodules  Benchmarks.cpp  CMakeLists.txt  SimdVec.h  Tests.cpp  main.cpp
SimdMath/: CMakeLists.txt  Mat4.h  Quat.h  SimdMat.h  SimdVec.h  Vec4.h
Tests/: Benchmarks.cpp  CMakeLists.txt  MatrixTests.cpp  PlainMath.h  QuaternionTests.cpp  TestUtils.cpp  TestUtils.h  VectorTests.cpp
Visualization/: CMakeLists.txt  Movable.h  Shader.cpp  Shader.h  VertexBuffer.h  Visualization.cpp
